# nl-to-openapi-generator

./: .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
app/: generator.py  main.py  prompts.py  validator.py
examples/: users_api.txt  users_api.yaml
static/: index.html
tests/: __init__.py  test_generator.py  test_main.py  test_validator.py
